src/SourceBrowser.Site/Content/Site.css
line-numbers
{
    margin:20px;
}

.source-code span
{
    font-family:monospace;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}

.sb-jumbotron
{
    background-color: #7f34a9;
}

.sb-jumbotron .lead
{
    color: #fdf;
    font-size: large;
    margin-top: 2em;
    margin-bottom: 2em;
}

.sb-jumbotron h1
{
    color: #fff;
    font-weight: normal;
}

.Keyword {
    color:blue;
}

.source-code a {
    color:#333333;
}

.source-code .Type {
    color:#2DADED;
}

.source-code .Type a {
    color:#2DADED;
}

.Comment {
    color: #18890D;
}

#search-box {
    border: none;
    background: #FFF;
    width:400px;
    height:20px;
    margin:7px auto;
    color:#333;
}


.String {
    color:#A31515;
}

#search-results a {
    display:block;
    padding:5px 10px;
    color:#333;
    overflow:hidden;
    word-wrap: break-word;
}

#search-results span {
    display:block;
}

#search-results a span:first-of-type{
    font-weight:bold;
}

#search-results a span:last-of-type{
    font-size:12px;
    color:#666;
}

#search-results a:hover {
    text-decoration:none;
    background:#DDD;
}

/* Browse layout with source in one pane and treeview/search in another: */
#sb-viewhost {
    top: 45px;
    bottom: 0;
    /* Not sure why, but without this, sb-viewhost is 30px wider than the screen */
    left: 15px;
    right: 15px;
    position: fixed;
    overflow: hidden;
}

#main-content {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 320px;
    overflow: scroll;
    overflow-y: auto;
    overflow-x: auto;
    padding-left: 20px;
}

#browser {
    position: absolute;
    width: 320px;
    top: 0;
    bottom: 0;
    right: 0;
    padding-left: 20px;
    overflow-y: auto;
    overflow-x: scroll; /* For file names that are too long*/
}

#search-results {
}

#tree-view {
}

/* End of browse layout */

